# logutil

./: pyproject.toml
examples/: ex1.py
src/logutil/: __init__.py  logger.py
